# agent-guardrails

./: .gitignore  CLAUDE.md  README.md  implementation-plan.md
.claude/agents/: dashboard-dev.md  demo-agent.md  program-dev.md  security-reviewer.md  server-dev.md  worker-dev.md
.claude/commands/: build-all.md  check-status.md  deploy-devnet.md  gen-types.md  impl-section.md  run-demo.md  sync-sdk.md  test-program.md
.githooks/: pre-commit
.github/workflows/: ci-dashboard.yml  ci-program.yml  ci-server.yml  ci-worker.yml  deploy-program.yml  deploy-server.yml  (+2 more)
contributing/: CONTRIBUTING.md  HACKATHON.md  README.md
dashboard/: .env.example  .stylelintrc.json  CLAUDE.md  IMPLEMENTATION.md  PHASES.md  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
docs/: architecture.md  data-contracts.md  demo-runbook.md  deploy.md  env-setup.md  walkthrough.md
program/: .npmrc  Anchor.toml  CLAUDE.md  Cargo.toml  IMPLEMENTATION.md  package.json  pnpm-lock.yaml
program/programs/guardrails/: Cargo.toml
program/programs/guardrails/src/: errors.rs  events.rs  lib.rs
program/programs/guardrails/src/instructions/: escalate_to_squads.rs  guarded_execute.rs  initialize_policy.rs  mod.rs  pause_agent.rs  resume_agent.rs  rotate_agent_key.rs  update_policy.rs
program/programs/guardrails/src/state/: mod.rs  policy.rs  spend_tracker.rs
scripts/: sync-sdk.sh
sdk/: CLAUDE.md  types.ts
server/: .env.example  Dockerfile  IMPLEMENTATION.md  fly.toml  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
worker/: CLAUDE.md
(+153 files in other folders)
