[package]
name = "guardrails"
version = "0.1.0"
description = "Agent Guardrails Protocol — on-chain policy enforcement for Solana AI agents"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "guardrails"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = [
  'cfg(feature, values("custom-heap", "custom-panic", "anchor-debug"))',
  'cfg(target_os, values("solana"))',
] }

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
